--- a/ipetour/package.json
+++ b/ipetour/package.json
@@ -14,20 +14,24 @@
     "start": "vite dev"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@types/swiper": "^6.0.0",
     "axios": "^1.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.2",
     "react-id-swiper": "^4.0.0",
+    "react-phone-number-input": "^3.4.12",
     "react-router-dom": "^7.1.5",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.2.6"
+    "swiper": "^11.2.6",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
+    "@types/react": "^19.1.3",
+    "@types/react-dom": "^19.1.3",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
