--- a/ipetour/package.json
+++ b/ipetour/package.json
@@ -17,10 +17,12 @@
     "@hookform/resolvers": "^5.0.1",
     "@types/swiper": "^6.0.0",
     "axios": "^1.9.0",
+    "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
     "react-id-swiper": "^4.0.0",
+    "react-leaflet": "^5.0.0",
     "react-phone-number-input": "^3.4.12",
     "react-router-dom": "^7.1.5",
     "react-slick": "^0.30.3",
@@ -30,6 +32,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/leaflet": "^1.9.17",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
     "@vitejs/plugin-react": "^4.3.4",
